<resources>
    <string name="app_name">Appsychology</string>
    <string name="text_somosButton">Quienes somos</string>
    <string name="text_registerButton">Registrar</string>
    <string name="text_loginButton">Iniciar sesión</string>
    <string name="text_forgetKey"><u>¿Olvidó contraseña de acceso?</u></string>
    <string name="text_quienesSomos1">La Salud Mental es un estado de bienestar que nos permite desarrollar nuestro potencial y cumplir las metas de nuestra vida, por eso somos queremos darte un espacio en el cuál puedas contactar a un psicólogo y así fortalecer el cuidado de tu salud mental.</string>
    <string name="text_quienesSomos2">Somos una App diseñada para facilitar el contacto con profesionales en psicología clínica certificados, de tal manera que puedas programar la cita de forma rápida y pueda vincularse fácilmente a un proceso de psicoterapia.</string>
    <string name="text_autor">Autores: Carlos Moreno, Diana Ordoñez, Armando Garzón, Duván Fernandez, German Varga</string>
    <string name="text_user">Usuario</string>
    <string name="text_password">Contraseña</string>
    <string name="text_passwordNew">Contraseña nueva</string>
    <string name="todo">TODO</string>
    <string name="text_firstName">Nombre</string>
    <string name="text_lastName">Apellido</string>
    <string name="text_email">Correo electrónico</string>
    <string name="text_cellPhone">Teléfono</string>
    <string name="text_address">Dirección</string>
    <string name="title_ingresar_datos">Ingresar datos</string>
    <string name="title_actualizar_datos">Actualizar datos</string>
    <string name="text_recuperar">Enviar</string>
    <string name="text_ingresar">Ingresar</string>
    <string name="text_registrar">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_cerrar_sesion">Cerrar sesión</string>
    <string name="text_derechos">Todos los derechos reservados.</string>
    <string name="text_ubicacion">Ubicación</string>
    <string name="text_perfil_card">Perfil:</string>
    <string name="text_name_card">Nombre:</string>
    <string name="datos_personales_text">Datos personales</string>
    <string name="text_passwordConfirm">Confirmar contraseña</string>
    <string name="text_bienvenido">Bienvenido</string>
    <string name="text_save">Guardar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_edit">Editar</string>
    <string name="title_activity_register_end">RegisterEndActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_datos_personales">Datos personales</string>
</resources>