<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/fondoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red_A200"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck,ImageContrastCheck"
        />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/redDark_A200"
        android:textSize="40sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@id/logoImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="160dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/somosButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/logo"
        app:layout_constraintVertical_bias="0.8"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/somosButton"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:text="@string/text_somosButton"
        android:textAlignment="inherit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/text_registerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/somosButton"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/text_loginButton"
        app:layout_constraintTop_toBottomOf="@id/somosButton"
        app:layout_constraintStart_toEndOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"/>
</androidx.constraintlayout.widget.ConstraintLayout>