<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.ui.fragments.EditUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/updateDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/title_actualizar_datos"
        android:textAlignment="center"
        android:textColor="@color/secondaryColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/userEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/text_user"
        android:importantForAutofill="no"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/secondaryColor"
        app:hintTextColor="@color/secondaryColor"
        app:boxStrokeColor="@color/gray"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/gray"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/updateDateTitle"
        tools:ignore="TextContrastCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="1"
            android:textColor="@color/secondaryColor"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/text_firstName"
        android:importantForAutofill="no"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/secondaryColor"
        app:hintTextColor="@color/secondaryColor"
        app:boxStrokeColor="@color/gray"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/gray"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEditText"
        tools:ignore="TextContrastCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:lines="1"
            android:textColor="@color/secondaryColor"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_lastName"
        android:importantForAutofill="no"
        android:layout_marginTop="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/secondaryColor"
        app:hintTextColor="@color/secondaryColor"
        app:boxStrokeColor="@color/gray"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconTint="@color/gray"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        tools:ignore="TextContrastCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:lines="1"
            android:textColor="@color/secondaryColor"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/text_email"
        android:importantForAutofill="no"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/secondaryColor"
        app:hintTextColor="@color/secondaryColor"
        app:boxStrokeColor="@color/gray"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/gray"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameEditText"
        tools:ignore="TextContrastCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/secondaryColor"
            android:enabled="false"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/text_cellPhone"
        android:importantForAutofill="no"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/secondaryColor"
        app:hintTextColor="@color/secondaryColor"
        app:boxStrokeColor="@color/gray"
        app:startIconDrawable="@drawable/ic_phone"
        app:startIconTint="@color/gray"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextColor="@color/red"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        tools:ignore="TextContrastCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:lines="1"
            android:textColor="@color/secondaryColor"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSaveEditUser"
            style="@style/Theme.Material3.Dark.NoActionBar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/style_save_button"
            android:contentDescription="@string/todo"
            android:text="@string/text_save"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneEditText"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnCancelEditUser"
        style="@style/Theme.Material3.Dark.NoActionBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/style_cancel_button"
        android:contentDescription="@string/todo"
        android:text="@string/text_cancel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
