<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".view.ui.activities.ForgetKeyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fondo">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/secondaryColor"
        android:textSize="40sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logoImage" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInfo"
        app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="Se enviará un correo electrónico para recuperar su contraseña"
            android:textAlignment="center"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/emailForgetKey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailForgetKey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:hint="@string/text_email"
            android:importantForAutofill="no"
            android:textColorHint="@color/secondaryColor"
            app:boxStrokeColor="@color/gray"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorTextColor="@color/red"
            app:hintTextColor="@color/secondaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/gray"
            tools:ignore="TextContrastCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColor="@color/secondaryColor"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
        android:id="@+id/recuperarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/style_custom_button"
        android:padding="1dp"
        android:text="@string/text_recuperar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/secondaryColor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailForgetKey"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>